# anlang

./: .pre-commit-config.yaml  Cargo.toml  Makefile  README.md  committed.toml
.github/workflows/: ci.yml
crates/ana/: Cargo.toml
crates/ana/src/: lib.rs  main.rs
crates/ana_lexer/: Cargo.toml
crates/ana_lexer/src/: lib.rs
crates/ana_repl/: Cargo.toml
crates/ana_repl/src/: lib.rs  main.rs
crates/ana_token/: Cargo.toml
src/: lexer.rs  lib.rs  main.rs  token.rs
