[package]
authors      = ["Murilo Ijanc' <mbsd@m0x.ru>"]
description  = "A study of language"
edition      = "2021"
homepage     = "https://m0x.ru"
license      = "MIT"
name         = "anlang"
repository   = "https://git.sr.ht/~mbsd/anos"
rust-version = "1.78"
version      = "0.1.0"

[lints.clippy]
all        = { level = "warn" }

[[bin]]
name = "an"
path = "src/main.rs"
test = false

[dependencies]

[profile.release]
# Configurations explicitly listed here for clarity.
# Using the best options for performance.
opt-level     = 3
lto           = "fat"
codegen-units = 1
strip         = "symbols" # set to `false` for debug information
debug         = false # set to `true` for debug information
panic         = "abort" # Let it crash and force ourselves to write safe Rust.
