[package]
name                   = "ana"
authors.workspace      = true
description.workspace  = true
edition.workspace      = true
homepage.workspace     = true
license.workspace      = true
repository.workspace   = true
rust-version.workspace = true
version.workspace      = true

[dependencies]
ana_token = { workspace = true }
ana_lexer = { workspace = true }

[lib]
doctest = false

[lints]
workspace = true
